--- a/index.html
+++ b/index.html
@@ -5,8 +5,134 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tec-Pro</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    
+    <header class="header">
+        <div class="contenedor contenido-header">
+
+            <div class="imagen-header">
+                <picture>
+                    <source
+                        srcset="img/header.avif" type="image/avif" >
+                    <source
+                        srcset="img/header.webp" type="image/webp">
+                    <img loading="lazy" src="img/header.png" alt="imagen header" width="1000px">
+                </picture>
+            </div>
+
+            <div class="texto-header">
+                <p class="tagline-producto">Sonido Profesional</p>
+                <h1 class="nombre-producto degra-verde">TecPRO</h1>
+                <p class="descripcion-producto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Officia aspernatur ex ipsam magni atque ducimus, fugit 
+                    praesentium harum vel qui quae maiores laboriosam 
+                    veritatis eligendi eum id non, aut eius.
+                </p>
+                <p class="precio-producto">Desde <span>$299</span></p>
+            </div>
+        </div>
+    </header>
+    <section class="contenedor">
+        <div class="iconos">
+            <div class="icono">
+                <img src="img/icono-sonido.svg" alt="icono sonido">
+                <h3>Gran Sonido</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Molestias porro ea consequatur! Culpa, id libero!
+                </p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono-garantia.svg" alt="icono sonido">
+                <h3>Garantía de por vida</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Molestias porro ea consequatur! Culpa, id libero!
+                </p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono-bateria.svg" alt="icono sonido">
+                <h3>+ 20 Horas de Batería</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Molestias porro ea consequatur! Culpa, id libero!
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="sobre-tech">
+        <div class="contenedor sobre-tech-grid">
+            <div class="texto-sobre-tech">
+                <h2>Sobre los <span>TechPRO</span></h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Fugit, aliquam corporis repudiandae earum tempora 
+                    nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing 
+                    elit. Fugit, aliquam corporis repudiandae earum tempora 
+                    nesciunt.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <main class="contenedor modelos">
+        <h2 class="text-center degra-verde head-modelos">Elige tus TechPRO</h2>
+
+        <div class="listado-modelos">
+            <div class="modelo modelo-x">
+                <h3>TechPRO X</h3>
+                <p class="precio">$299</p>
+            </div>
+
+            <div class="modelo modelo-y">
+                <h3>TechPRO Y</h3>
+                <p class="precio">$399</p>
+            </div>
+
+            <div class="modelo modelo-z">
+                <h3>TechPRO Z</h3>
+                <p class="precio">$499</p>
+            </div>
+        </div>
+    </main>
+
+    <section class="newsletter">
+        <div class="contenido-newsletter contenedor">
+            <div class="texto-newsletter">
+                <h2>Recibe Actualizaciones</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Odit deserunt suscipit voluptatum ipsum beatae 
+                    recusandae laudantium impedit. Aperiam cum itaque 
+                    assumenda, vitae expedita laudantium neque obcaecati 
+                    et distinctio praesentium sit.
+                </p>
+
+                <form action="" class="formulario">
+                    <div class="input">
+                        <input type="text" placeholder="Tu email">
+                    </div>
+
+                    <input type="submit" value="Inscribirme">
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>Todos los derechos reservados ®</p>
+    </footer>
+
+    <script src="js/imagenes.js"></script>
 </body>
 </html>
